--- a/docker-compose/templates/dota2parser-service.yaml
+++ b/docker-compose/templates/dota2parser-service.yaml
@@ -13,7 +13,10 @@ spec:
     - name: "5600"
       port: 5600
       targetPort: 5600
+  clusterIP: 172.16.238.2
   selector:
     io.kompose.service: dota2parser
 status:
-  loadBalancer: {}
+  loadBalancer:
+    ingress:
+      - ip: 172.16.1.50
