--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -12,10 +12,10 @@ services:
     networks:
       # you may set custom IP addresses
       front:
-        ipv4_address: 10.96.0.2
+        ipv4_address: 172.16.238.2
 
   dota2parser:
-    image: nopponaim603/dota2parser:k8s
+    image: nopponaim603/dota2parser
     ports:
       - "5600:5600"
     volumes:
@@ -25,7 +25,7 @@ services:
     networks:
       # you may set custom IP addresses
       front:
-        ipv4_address: 10.96.0.3
+        ipv4_address: 172.16.238.3
 
   kafka:
     image: wurstmeister/kafka
@@ -40,7 +40,7 @@ services:
     networks:
       # you may set custom IP addresses
       front:
-        ipv4_address: 10.96.0.10
+        ipv4_address: 172.16.238.10
 
   zookeeper:
     image: wurstmeister/zookeeper
@@ -49,7 +49,7 @@ services:
     networks:
       # you may set custom IP addresses
       front:
-        ipv4_address: 10.96.0.11
+        ipv4_address: 172.16.238.11
 
   notebook:
     image: jairamc/spark-kafka-streaming-notebook
@@ -63,9 +63,9 @@ services:
     networks:
       # you may set custom IP addresses
       front:
-        ipv4_address: 10.96.0.12
+        ipv4_address: 172.16.238.12
 
-  master:
+  spark-master:
     image: jairamc/spark-kafka-streaming
     hostname: master
     environment:
@@ -81,9 +81,9 @@ services:
     networks:
       # you may set custom IP addresses
       front:
-        ipv4_address: 10.96.0.13
+        ipv4_address: 172.16.238.13
 
-  slave:
+  spark-slave:
     image: jairamc/spark-kafka-streaming
     hostname: worker
     depends_on:
@@ -102,7 +102,10 @@ services:
     networks:
       # you may set custom IP addresses
       front:
-        ipv4_address: 10.96.0.14
+        ipv4_address: 172.16.238.14
+
+
+
 
 networks:
   front:
@@ -113,7 +116,7 @@ networks:
     ipam:
       driver: default
       config:
-        - subnet: 10.96.0.0/24
-          gateway: 10.96.0.1
+        - subnet: 172.16.238.0/24
+          gateway: 172.16.238.1
         - subnet: "2001:3984:3989::/64"
           gateway: "2001:3984:3989::1"
