--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
 
   flume:
-    image: nopponaim603/flume:kafka
+    image: nopponaim603/flume:kafka-k8s
     ports:
       - "44444:44444"
     volumes:
@@ -12,10 +12,10 @@ services:
     networks:
       # you may set custom IP addresses
       front:
-        ipv4_address: 172.16.238.2
+        ipv4_address: 10.96.0.2
 
   dota2parser:
-    image: nopponaim603/dota2parser
+    image: nopponaim603/dota2parser:k8s
     ports:
       - "5600:5600"
     volumes:
@@ -25,7 +25,7 @@ services:
     networks:
       # you may set custom IP addresses
       front:
-        ipv4_address: 172.16.238.3
+        ipv4_address: 10.96.0.3
 
   kafka:
     image: wurstmeister/kafka
@@ -40,7 +40,7 @@ services:
     networks:
       # you may set custom IP addresses
       front:
-        ipv4_address: 172.16.238.10
+        ipv4_address: 10.96.0.20
 
   zookeeper:
     image: wurstmeister/zookeeper
@@ -49,7 +49,7 @@ services:
     networks:
       # you may set custom IP addresses
       front:
-        ipv4_address: 172.16.238.11
+        ipv4_address: 10.96.0.21
 
   notebook:
     image: jairamc/spark-kafka-streaming-notebook
@@ -63,9 +63,9 @@ services:
     networks:
       # you may set custom IP addresses
       front:
-        ipv4_address: 172.16.238.12
+        ipv4_address: 10.96.0.22
 
-  spark-master:
+  master:
     image: jairamc/spark-kafka-streaming
     hostname: master
     environment:
@@ -81,9 +81,9 @@ services:
     networks:
       # you may set custom IP addresses
       front:
-        ipv4_address: 172.16.238.13
+        ipv4_address: 10.96.0.23
 
-  spark-slave:
+  slave:
     image: jairamc/spark-kafka-streaming
     hostname: worker
     depends_on:
@@ -102,10 +102,7 @@ services:
     networks:
       # you may set custom IP addresses
       front:
-        ipv4_address: 172.16.238.14
-
-
-
+        ipv4_address: 10.96.0.24
 
 networks:
   front:
@@ -116,7 +113,7 @@ networks:
     ipam:
       driver: default
       config:
-        - subnet: 172.16.238.0/24
-          gateway: 172.16.238.1
+        - subnet: 10.96.0.0/24
+          gateway: 10.96.0.1
         - subnet: "2001:3984:3989::/64"
           gateway: "2001:3984:3989::1"
