--- a/docker-compose/templates/dota2parser-service.yaml
+++ b/docker-compose/templates/dota2parser-service.yaml
@@ -2,13 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: kompose --file docker-compose.yml convert --chart
+    kompose.cmd: kompose --file docker-compose-ip.yml convert --chart
     kompose.version: 1.26.0 (40646f47)
   creationTimestamp: null
   labels:
     io.kompose.service: dota2parser
   name: dota2parser
 spec:
+  type: LoadBalancer
   ports:
     - name: "5600"
       port: 5600
@@ -17,6 +18,4 @@ spec:
   selector:
     io.kompose.service: dota2parser
 status:
-  loadBalancer:
-    ingress:
-      - ip: 192.168.1.100
+  loadBalancer: {}
