--- a/docker-compose/templates/flume-service.yaml
+++ b/docker-compose/templates/flume-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: kompose --file docker-compose.yml convert --chart
+    kompose.cmd: kompose --file docker-compose-ip.yml convert --chart
     kompose.version: 1.26.0 (40646f47)
   creationTimestamp: null
   labels:
@@ -13,6 +13,7 @@ spec:
     - name: "44444"
       port: 44444
       targetPort: 44444
+  clusterIP: 10.96.0.2
   selector:
     io.kompose.service: flume
 status:
