--- a/docker-compose/templates/zookeeper-deployment.yaml
+++ b/docker-compose/templates/zookeeper-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: kompose --file docker-compose.yml convert --chart
+    kompose.cmd: kompose --file docker-compose-ip.yml convert --chart
     kompose.version: 1.26.0 (40646f47)
   creationTimestamp: null
   labels:
@@ -17,7 +17,7 @@ spec:
   template:
     metadata:
       annotations:
-        kompose.cmd: kompose --file docker-compose.yml convert --chart
+        kompose.cmd: kompose --file docker-compose-ip.yml convert --chart
         kompose.version: 1.26.0 (40646f47)
       creationTimestamp: null
       labels:
