--- a/docker-compose/templates/kafka-deployment.yaml
+++ b/docker-compose/templates/kafka-deployment.yaml
@@ -29,6 +29,10 @@ spec:
         - env:
             - name: KAFKA_ADVERTISED_HOST_NAME
               value: kafka
+            - name: KAFKA_ADVERTISED_PORT
+              value: "9092"
+            - name: KAFKA_PORT
+              value: "9092"
             - name: KAFKA_CREATE_TOPICS
               value: sample_topic:1:1,android:1:1,acceleration:1:1
             - name: KAFKA_ZOOKEEPER_CONNECT
