test setting protocal.

--- a/docker-compose/templates/dota2parser-deployment.yaml
+++ b/docker-compose/templates/dota2parser-deployment.yaml
@@ -33,6 +33,7 @@ spec:
           name: dota2parser
           ports:
             - containerPort: 5600
+              protocol: UDP
           resources: {}
           volumeMounts:
             - mountPath: /usr/src/parser/JSON
