--- a/docker-compose/templates/dota2parser-service.yaml
+++ b/docker-compose/templates/dota2parser-service.yaml
@@ -14,6 +14,7 @@ spec:
     - name: "5600"
       port: 5600
       targetPort: 5600
+      protocol: TCP
   clusterIP: 10.96.0.3
   selector:
     io.kompose.service: dota2parser
