setting notebook-service.yaml and master-service.yaml to explore port by set type LoadBalancer.

--- a/docker-compose/templates/notebook-service.yaml
+++ b/docker-compose/templates/notebook-service.yaml
@@ -9,6 +9,7 @@ metadata:
     io.kompose.service: notebook
   name: notebook
 spec:
+  type: LoadBalancer
   ports:
     - name: "8888"
       port: 8888
