--- a/docker-compose/templates/master-service.yaml
+++ b/docker-compose/templates/master-service.yaml
@@ -9,6 +9,7 @@ metadata:
     io.kompose.service: master
   name: master
 spec:
+  type: LoadBalancer
   ports:
     - name: "8080"
       port: 8080
