update docker-compose setting. add kompose command.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,14 @@ services:
       - ./JSON:/usr/src/parser/JSON
     environment:
       - JVM_OPTS=-Xms1024M -Xmx1024M
+    command: java -jar -Xmx1024m /usr/src/parser/target/stats-0.1.0.jar 5600 10.96.0.3 44444
     networks:
       # you may set custom IP addresses
       front:
-        ipv4_address: 10.96.0.3
+        ipv4_address: 10.96.0.2
 
   flume:
-    image: nopponaim603/flume:kafka-k8s
+    image: nopponaim603/flume:kafka-1.9.0
     ports:
       - "44444:44444"
     volumes:
@@ -25,7 +26,7 @@ services:
     networks:
       # you may set custom IP addresses
       front:
-        ipv4_address: 10.96.0.2
+        ipv4_address: 10.96.0.3
 
   kafka:
     image: wurstmeister/kafka
@@ -36,7 +37,7 @@ services:
       KAFKA_CREATE_TOPICS: "sample_topic:1:1,android:1:1,acceleration:1:1"
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - ./kafka/var/run/docker.sock:/var/run/docker.sock
     networks:
       # you may set custom IP addresses
       front:
@@ -52,10 +53,11 @@ services:
         ipv4_address: 10.96.0.21
 
   notebook:
-    image: jairamc/spark-kafka-streaming-notebook
+    #image: jairamc/spark-kafka-streaming-notebook
+    image: nopponaim603/jupyter-notebook:spark-kafka-3.1.2
     environment:
       SPARK_OPTS: '--master=spark://master:7077'
-    command: jupyter notebook --ip=0.0.0.0
+    command: jupyter notebook --ip=0.0.0.0 --allow-root
     ports:
       - 8888:8888
     volumes:
@@ -66,13 +68,16 @@ services:
         ipv4_address: 10.96.0.22
 
   master:
-    image: jairamc/spark-kafka-streaming
+    #image: bitnami/spark
+    #image: jairamc/spark-kafka-streaming
+    image: nopponaim603/spark-streaming-kafka:3.1.2
     hostname: master
     environment:
       SPARK_HOME: /usr/local/spark
       MASTER: spark://master:7077
       SPARK_CONF_DIR: /usr/local/spark/conf
       SPARK_PUBLIC_DNS: localhost
+      HADOOP_HOME: /usr/local/spark
     ports:
       - 8080:8080
       - 7077:7077
@@ -84,7 +89,8 @@ services:
         ipv4_address: 10.96.0.23
 
   slave:
-    image: jairamc/spark-kafka-streaming
+    #image: jairamc/spark-kafka-streaming
+    image: nopponaim603/spark-streaming-kafka:3.1.2
     hostname: worker
     depends_on:
       - master
