reset fix ip use metallb to auto setup loadbalance ip.

--- a/docker-compose/templates/dota2parser-service.yaml
+++ b/docker-compose/templates/dota2parser-service.yaml
@@ -15,11 +15,7 @@ spec:
       port: 5600
       targetPort: 5600
       protocol: TCP
-  externalIPs:
-    - 172.16.1.225
   selector:
     io.kompose.service: dota2parser
 status:
-  loadBalancer:
-    ingress:
-      - hostname: dota2parser.com
+  loadBalancer: {}
