--- a/docker-compose/templates/flume-service.yaml
+++ b/docker-compose/templates/flume-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: kompose --file docker-compose-ip.yml convert --chart
+    kompose.cmd: kompose --file docker-compose.yml convert --chart
     kompose.version: 1.26.0 (40646f47)
   creationTimestamp: null
   labels:
@@ -13,6 +13,21 @@ spec:
     - name: "44444"
       port: 44444
       targetPort: 44444
+    - name: "44451"
+      port: 44451
+      targetPort: 44451
+    - name: "44452"
+      port: 44452
+      targetPort: 44452
+    - name: "44453"
+      port: 44453
+      targetPort: 44453
+    - name: "44454"
+      port: 44454
+      targetPort: 44454
+    - name: "44455"
+      port: 44455
+      targetPort: 44455
   selector:
     io.kompose.service: flume
 status:
