--- a/docker-compose/templates/kafka-deployment.yaml
+++ b/docker-compose/templates/kafka-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: kompose --file docker-compose-ip.yml convert --chart
+    kompose.cmd: kompose --file docker-compose.yml convert --chart
     kompose.version: 1.26.0 (40646f47)
   creationTimestamp: null
   labels:
@@ -18,7 +18,7 @@ spec:
   template:
     metadata:
       annotations:
-        kompose.cmd: kompose --file docker-compose-ip.yml convert --chart
+        kompose.cmd: kompose --file docker-compose.yml convert --chart
         kompose.version: 1.26.0 (40646f47)
       creationTimestamp: null
       labels:
@@ -29,15 +29,15 @@ spec:
         - env:
             - name: KAFKA_ADVERTISED_HOST_NAME
               value: kafka
-            - name: KAFKA_ADVERTISED_PORT
-              value: "9092"
-            - name: KAFKA_PORT
-              value: "9092"
+            - name: KAFKA_BROKER_ID
+              value: "0"
             - name: KAFKA_CREATE_TOPICS
               value: sample_topic:1:1,android:1:1,acceleration:1:1
+            - name: KAFKA_NUM_PARTITIONS
+              value: "2"
             - name: KAFKA_ZOOKEEPER_CONNECT
               value: zookeeper:2181
-          image: wurstmeister/kafka
+          image: bitnami/kafka:latest
           name: kafka
           ports:
             - containerPort: 9092
