--- a/docker-compose/templates/master-deployment.yaml
+++ b/docker-compose/templates/master-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: kompose --file docker-compose-ip.yml convert --chart
+    kompose.cmd: kompose --file docker-compose.yml convert --chart
     kompose.version: 1.26.0 (40646f47)
   creationTimestamp: null
   labels:
@@ -17,7 +17,7 @@ spec:
   template:
     metadata:
       annotations:
-        kompose.cmd: kompose --file docker-compose-ip.yml convert --chart
+        kompose.cmd: kompose --file docker-compose.yml convert --chart
         kompose.version: 1.26.0 (40646f47)
       creationTimestamp: null
       labels:
@@ -31,6 +31,8 @@ spec:
             - -h
             - master
           env:
+            - name: HADOOP_HOME
+              value: /usr/local/spark
             - name: MASTER
               value: spark://master:7077
             - name: SPARK_CONF_DIR
@@ -39,7 +41,7 @@ spec:
               value: /usr/local/spark
             - name: SPARK_PUBLIC_DNS
               value: localhost
-          image: nopponaim603/spark-streaming-kafka:3.3.0
+          image: nopponaim603/spark-streaming-kafka:3.1.2
           name: master
           ports:
             - containerPort: 8080
