--- a/docker-compose/templates/dota2parser-deployment.yaml
+++ b/docker-compose/templates/dota2parser-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    kompose.cmd: kompose --file docker-compose-ip.yml convert --chart
+    kompose.cmd: kompose --file docker-compose.yml convert --chart
     kompose.version: 1.26.0 (40646f47)
   creationTimestamp: null
   labels:
@@ -18,7 +18,7 @@ spec:
   template:
     metadata:
       annotations:
-        kompose.cmd: kompose --file docker-compose-ip.yml convert --chart
+        kompose.cmd: kompose --file docker-compose.yml convert --chart
         kompose.version: 1.26.0 (40646f47)
       creationTimestamp: null
       labels:
@@ -26,10 +26,19 @@ spec:
         io.kompose.service: dota2parser
     spec:
       containers:
-        - env:
+        - args:
+            - java
+            - -jar
+            - -Xmx1024m
+            - /usr/src/parser/target/stats-0.1.0.jar
+            - "5600"
+            - flume
+            - "44451"
+            - "1"
+          env:
             - name: JVM_OPTS
               value: -Xms1024M -Xmx1024M
-          image: nopponaim603/dota2parser:flume
+          image: nopponaim603/dota2parser:flume-v2
           name: dota2parser
           ports:
             - containerPort: 5600
@@ -37,14 +46,6 @@ spec:
           volumeMounts:
             - mountPath: /usr/src/parser/JSON
               name: dota2parser-claim0
-          args:
-            - java
-            - -jar
-            - -Xmx1024m
-            - /usr/src/parser/target/stats-0.1.0.jar
-            - "5600"
-            - 10.98.110.64
-            - "44444"
       restartPolicy: Always
       volumes:
         - name: dota2parser-claim0
