--- a/docker-compose/templates/dota2parser-service.yaml
+++ b/docker-compose/templates/dota2parser-service.yaml
@@ -2,19 +2,17 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: kompose --file docker-compose-ip.yml convert --chart
+    kompose.cmd: kompose --file docker-compose.yml convert --chart
     kompose.version: 1.26.0 (40646f47)
   creationTimestamp: null
   labels:
     io.kompose.service: dota2parser
   name: dota2parser
 spec:
-  type: LoadBalancer
   ports:
     - name: "5600"
       port: 5600
       targetPort: 5600
-      protocol: TCP
   selector:
     io.kompose.service: dota2parser
 status:
