--- a/docker-compose/templates/kafka-service.yaml
+++ b/docker-compose/templates/kafka-service.yaml
@@ -2,14 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: kompose --file docker-compose-ip.yml convert --chart
+    kompose.cmd: kompose --file docker-compose.yml convert --chart
     kompose.version: 1.26.0 (40646f47)
   creationTimestamp: null
   labels:
     io.kompose.service: kafka
   name: kafka
 spec:
-  type: LoadBalancer
   ports:
     - name: "9092"
       port: 9092
